Fix cards alignment on team page

--- a/team_page/tp_style.css
+++ b/team_page/tp_style.css
@@ -81,7 +81,7 @@ h1 {
 
 .player-card--active {
     margin-right: 130px;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 .player_card__photo {
